--- a/index.html
+++ b/index.html
@@ -223,17 +223,39 @@
                 <a class="select-item" href="#" data-filter='.trip-1'>Speed hack trip</a>
             </div>
             <div class="slide-trips">
-                <img class="slide trip-1" src="src/assets/images/gallery-1.jpg" alt="" style="width: 160px; height: 120px;">
-                <img class="slide trip-1" src="src/assets/images/gallery-1.jpg" alt="" style="width: 160px; height: 120px;">
-                <img class="slide trip-1" src="src/assets/images/gallery-1.jpg" alt="" style="width: 160px; height: 120px;">
-                <img class="slide trip-1" src="src/assets/images/gallery-1.jpg" alt="" style="width: 160px; height: 120px;">
-                <img class="slide trip-1" src="src/assets/images/gallery-1.jpg" alt="" style="width: 160px; height: 120px;">
-                <img class="slide trip-1" src="src/assets/images/gallery-1.jpg" alt="" style="width: 160px; height: 120px;">
-                <img class="slide trip-3" src="src/assets/images/gallery-1.jpg" alt="" style="width: 160px; height: 120px;">
-                <img class="slide trip-3" src="src/assets/images/gallery-1.jpg" alt="" style="width: 160px; height: 120px;">
-                <img class="slide trip-2" src="src/assets/images/gallery-1.jpg" alt="" style="width: 160px; height: 120px;">
-                <img class="slide trip-2" src="src/assets/images/gallery-1.jpg" alt="" style="width: 160px; height: 120px;">
+                <div href="" class="slide trip-1">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-1">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-1">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-1">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-1">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-1">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-1">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-1">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-1">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-1">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
             </div>
+
+            <a href="#" class="btn btn-danger">Plan trip</a>
         </div>
 
         <a href="" class="btn btn-danger">Start rolling now</a>
