--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-        ga('create', 'UA-XXXXX-Y', 'auto');
+        ga('create', 'UA-135430757-1', 'auto');
         ga('send', 'pageview');
     </script>
     <link href="src/assets/css/font-awesome-all.min.css" rel="stylesheet">
