--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script>
         (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-135430757-1', 'auto');
@@ -272,10 +272,55 @@
         </div>
     </section>
     <section id="stats">
-        <canvas id="time"></canvas>
-        <canvas id="trip-difficulty"></canvas>
-        <canvas id="trip-all-way"></canvas>
-        <canvas id="trip-activity"></canvas>
+        <header>
+            <h1>Header</h1>
+            <p>Some text here Some text here Some text here</p>
+        </header>
+        <div class="container-flex">
+            <div class="canvas-cont" style="background: #61BC7B; padding-left: 40px; padding-right: 15px;">
+                <div class="wrapper">
+                    <canvas id="time"></canvas>
+                </div>
+                <div class="info">
+                    <h1>Create interactive charts easily for your web projects.</h1>
+                    <p>Used by tens of thousands of developers and 72 out of the world's 100 largest companies,
+                        Highcharts is the simplest yet most flexible charting API on the market.</p>
+                </div>
+            </div>
+
+            <div class="canvas-cont" style="background: #508CC8; padding-right: 40px; padding-left: 15px;">
+                <div class="wrapper">
+                    <canvas id="trip-difficulty"></canvas>
+                </div>
+                <div class="info">
+                    <h1>Create interactive charts easily for your web projects.</h1>
+                    <p>Used by tens of thousands of developers and 72 out of the world's 100 largest companies,
+                        Highcharts is the simplest yet most flexible charting API on the market.</p>
+                </div>
+            </div>
+
+            <div class="canvas-cont" style="background: #F49952; padding-left: 40px; padding-right: 15px;">
+                <div class="wrapper">
+                    <canvas id="trip-all-way"></canvas>
+                </div>
+                <div class="info">
+                    <h1>Create interactive charts easily for your web projects.</h1>
+                    <p>Used by tens of thousands of developers and 72 out of the world's 100 largest companies,
+                        Highcharts is the simplest yet most flexible charting API on the market.</p>
+                </div>
+            </div>
+
+            <div class="canvas-cont" style="background: #9C9EDB; padding-right: 40px; padding-left: 15px;">
+                <div class="wrapper">
+                    <canvas id="trip-activity"></canvas>
+                </div>
+                <div class="info">
+                    <h1>Create interactive charts easily for your web projects.</h1>
+                    <p>Used by tens of thousands of developers and 72 out of the world's 100 largest companies,
+                        Highcharts is the simplest yet most flexible charting API on the market.</p>
+                </div>
+            </div>
+        </div>
     </section>
     <script src="src/javascript/jquery-3.3.1.min.js"></script>
     <script src="./dist/main.js"></script>
