--- a/index.html
+++ b/index.html
@@ -278,44 +278,45 @@
         </header>
         <div class="container-flex">
             <div class="canvas-cont" style="background: #61BC7B; padding-left: 40px; padding-right: 15px;">
+                <h2>Time spendong on trips</h2>
                 <div class="wrapper">
                     <canvas id="time"></canvas>
                 </div>
                 <div class="info">
-                    <h1>Create interactive charts easily for your web projects.</h1>
                     <p>Used by tens of thousands of developers and 72 out of the world's 100 largest companies,
                         Highcharts is the simplest yet most flexible charting API on the market.</p>
                 </div>
             </div>
 
             <div class="canvas-cont" style="background: #508CC8; padding-right: 40px; padding-left: 15px;">
+                    <h2>Trip difficulty count</h2>
                 <div class="wrapper">
                     <canvas id="trip-difficulty"></canvas>
                 </div>
                 <div class="info">
-                    <h1>Create interactive charts easily for your web projects.</h1>
+                    
                     <p>Used by tens of thousands of developers and 72 out of the world's 100 largest companies,
                         Highcharts is the simplest yet most flexible charting API on the market.</p>
                 </div>
             </div>
 
             <div class="canvas-cont" style="background: #F49952; padding-left: 40px; padding-right: 15px;">
+                    <h2>Trip kilo</h2>
                 <div class="wrapper">
                     <canvas id="trip-all-way"></canvas>
                 </div>
-                <div class="info">
-                    <h1>Create interactive charts easily for your web projects.</h1>
+                <div class="info">         
                     <p>Used by tens of thousands of developers and 72 out of the world's 100 largest companies,
                         Highcharts is the simplest yet most flexible charting API on the market.</p>
                 </div>
             </div>
 
-            <div class="canvas-cont" style="background: #9C9EDB; padding-right: 40px; padding-left: 15px;">
+            <div class="canvas-cont" style="background: rgb(141, 143, 206); padding-right: 40px; padding-left: 15px;">
+                <h2>Trip season</h2>
                 <div class="wrapper">
                     <canvas id="trip-activity"></canvas>
                 </div>
                 <div class="info">
-                    <h1>Create interactive charts easily for your web projects.</h1>
                     <p>Used by tens of thousands of developers and 72 out of the world's 100 largest companies,
                         Highcharts is the simplest yet most flexible charting API on the market.</p>
                 </div>
