done statistics section

--- a/index.html
+++ b/index.html
@@ -273,52 +273,52 @@
     </section>
     <section id="stats">
         <header>
-            <h1>Header</h1>
-            <p>Some text here Some text here Some text here</p>
+            <h2>Vitae lacus dictum?</h2>
+            <p>Orem ipsum dolor sit amet, nunc sollicitudin mi condimentum, a sollicitudin eros malesuada.</p>
         </header>
         <div class="container-flex">
-            <div class="canvas-cont" style="background: #61BC7B; padding-left: 40px; padding-right: 15px;">
-                <h2>Time spendong on trips</h2>
+            <div class="canvas-cont" style="background: #61BC7B; padding-left: 40px; padding-right: 20px; border-top-left-radius: 10px;">
+                <h2>Time spending</h2>
                 <div class="wrapper">
                     <canvas id="time"></canvas>
                 </div>
                 <div class="info">
-                    <p>Used by tens of thousands of developers and 72 out of the world's 100 largest companies,
-                        Highcharts is the simplest yet most flexible charting API on the market.</p>
+                    <p>Nunc aliquam diam ac magna dapibus finibus. Suspendisse sed dictum nibh, quis efficitur diam.
+                        Cras in lacinia quam. Maecenas in pellentesque eros.</p>
                 </div>
             </div>
 
-            <div class="canvas-cont" style="background: #508CC8; padding-right: 40px; padding-left: 15px;">
-                    <h2>Trip difficulty count</h2>
+            <div class="canvas-cont" style="background: #508CC8; padding-right: 40px; padding-left: 20px; border-top-right-radius: 10px;">
+                <h2>Trip difficulty count</h2>
                 <div class="wrapper">
                     <canvas id="trip-difficulty"></canvas>
                 </div>
                 <div class="info">
-                    
-                    <p>Used by tens of thousands of developers and 72 out of the world's 100 largest companies,
-                        Highcharts is the simplest yet most flexible charting API on the market.</p>
+
+                    <p>Nunc aliquam diam ac magna dapibus finibus. Suspendisse sed dictum nibh, quis efficitur diam.
+                        Cras in lacinia quam. Maecenas in pellentesque eros.</p>
                 </div>
             </div>
 
-            <div class="canvas-cont" style="background: #F49952; padding-left: 40px; padding-right: 15px;">
-                    <h2>Trip kilo</h2>
+            <div class="canvas-cont" style="background: #F49952; padding-left: 40px; padding-right: 20px; border-bottom-left-radius: 10px;">
+                <h2>Trip mile</h2>
                 <div class="wrapper">
                     <canvas id="trip-all-way"></canvas>
                 </div>
-                <div class="info">         
-                    <p>Used by tens of thousands of developers and 72 out of the world's 100 largest companies,
-                        Highcharts is the simplest yet most flexible charting API on the market.</p>
+                <div class="info">
+                    <p>Nunc aliquam diam ac magna dapibus finibus. Suspendisse sed dictum nibh, quis efficitur diam.
+                        Cras in lacinia quam. Maecenas in pellentesque eros.</p>
                 </div>
             </div>
 
-            <div class="canvas-cont" style="background: rgb(141, 143, 206); padding-right: 40px; padding-left: 15px;">
+            <div class="canvas-cont" style="background: rgb(141, 143, 206); padding-right: 40px; padding-left: 20px; border-bottom-right-radius: 10px;">
                 <h2>Trip season</h2>
                 <div class="wrapper">
                     <canvas id="trip-activity"></canvas>
                 </div>
                 <div class="info">
-                    <p>Used by tens of thousands of developers and 72 out of the world's 100 largest companies,
-                        Highcharts is the simplest yet most flexible charting API on the market.</p>
+                    <p>Nunc aliquam diam ac magna dapibus finibus. Suspendisse sed dictum nibh, quis efficitur diam.
+                        Cras in lacinia quam. Maecenas in pellentesque eros.</p>
                 </div>
             </div>
         </div>
