--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Weather</a>
+                    <a class="nav-link" href="#calendar">Calendar</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Trip stats</a>
+                    <a class="nav-link" href="#stats">Trip stats</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Telegram</a>
@@ -84,7 +84,7 @@
             </form>
         </div>
     </nav>
-    <section id="sec-1">
+    <section id="home">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-10 col-lg-10 info">
@@ -191,7 +191,7 @@
         </div>
         </div>
     </section>
-    <section id="sec-3">
+    <section id="calendar">
         <div class="calendar">
             <div class="calendar-info">
                 <h2>My trip calendar</h2>
