--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
         </div>
     </section>
-    <section id="sec-2">
+    <section id="trips">
         <div class="container">
             <div class="row justify-content-center">
                 <header>
