add canvas aria-label

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <div class="canvas-cont" style="background: #61BC7B; padding-left: 40px; padding-right: 20px; border-top-left-radius: 10px;">
                 <h2>Time spending</h2>
                 <div class="wrapper">
-                    <canvas id="time"></canvas>
+                    <canvas id="time" role="img" aria-label=""</canvas>
                 </div>
                 <div class="info">
                     <p>Nunc aliquam diam ac magna dapibus finibus. Suspendisse sed dictum nibh, quis efficitur diam.
@@ -291,7 +291,7 @@
             <div class="canvas-cont" style="background: #508CC8; padding-right: 40px; padding-left: 20px; border-top-right-radius: 10px;">
                 <h2>Trip difficulty count</h2>
                 <div class="wrapper">
-                    <canvas id="trip-difficulty"></canvas>
+                    <canvas id="trip-difficulty" role="img" aria-label=""></canvas>
                 </div>
                 <div class="info">
 
@@ -303,7 +303,7 @@
             <div class="canvas-cont" style="background: #F49952; padding-left: 40px; padding-right: 20px; border-bottom-left-radius: 10px;">
                 <h2>Trip mile</h2>
                 <div class="wrapper">
-                    <canvas id="trip-all-way"></canvas>
+                    <canvas id="trip-all-way" role="img" aria-label=""></canvas>
                 </div>
                 <div class="info">
                     <p>Nunc aliquam diam ac magna dapibus finibus. Suspendisse sed dictum nibh, quis efficitur diam.
@@ -314,7 +314,7 @@
             <div class="canvas-cont" style="background: rgb(141, 143, 206); padding-right: 40px; padding-left: 20px; border-bottom-right-radius: 10px;">
                 <h2>Trip season</h2>
                 <div class="wrapper">
-                    <canvas id="trip-activity"></canvas>
+                    <canvas id="trip-activity" role="img" aria-label=""></canvas>
                 </div>
                 <div class="info">
                     <p>Nunc aliquam diam ac magna dapibus finibus. Suspendisse sed dictum nibh, quis efficitur diam.
