--- a/index.html
+++ b/index.html
@@ -39,15 +39,18 @@
 
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+
         <a class="navbar-brand" href="#">Z<span><img src="src/assets/images/logo-illuminati.png"></span>EZD</a>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#home">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -55,17 +58,17 @@
                         Trips
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Pussy trip<i class="fas fa-walking"></i></a>
+                        <a class="dropdown-item" href="#trips"> Pussy trip <i class="fas fa-walking"></i> </a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Savage trip<i class="fab fa-studiovinari"></i></a>
+                        <a class="dropdown-item" href="#trips"> Savage trip <i class="fab fa-studiovinari"></i> </a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Try escape trip<i class="fas fa-skull-crossbones"></i></a>
+                        <a class="dropdown-item" href="#trips"> Try escape trip <i class="fas fa-skull-crossbones"> </i></a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Train trip<i class="fas fa-user-secret"></i></a>
+                        <a class="dropdown-item" href="#trips"> Train trip <i class="fas fa-user-secret"> </i></a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">No road trip<i class="fas fa-book-dead"></i></a>
+                        <a class="dropdown-item" href="#trips"> No road trip <i class="fas fa-book-dead"> </i></a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Speed hack trip<i class="fas fa-dragon"></i></a>
+                        <a class="dropdown-item" href="#trips"> Speed hack trip <i class="fas fa-dragon"> </i></a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -78,10 +81,10 @@
                     <a class="nav-link" href="#">Telegram</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+            <div class="btn-toolbar mr-4" role="toolbar" aria-label="Toolbar with button groups">
+                <button type="button" class="btn btn-outline-success mr-3">Log in</button>
+                <button type="button" class="btn btn-outline-success">Sign up</button>
+            </div>
         </div>
     </nav>
     <section id="home">
@@ -280,11 +283,10 @@
             <div class="canvas-cont" style="background: #61BC7B; padding-left: 40px; padding-right: 20px; border-top-left-radius: 10px;">
                 <h2>Time spending</h2>
                 <div class="wrapper">
-                    <canvas id="time" role="img" aria-label=""</canvas>
-                </div>
-                <div class="info">
-                    <p>Nunc aliquam diam ac magna dapibus finibus. Suspendisse sed dictum nibh, quis efficitur diam.
-                        Cras in lacinia quam. Maecenas in pellentesque eros.</p>
+                    <canvas id="time" role="img" aria-label="" </canvas> </div> <div class="info">
+                        <p>Nunc aliquam diam ac magna dapibus finibus. Suspendisse sed dictum nibh, quis efficitur
+                            diam.
+                            Cras in lacinia quam. Maecenas in pellentesque eros.</p>
                 </div>
             </div>
 
