add constants file

--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
         </div>
     </section>
     <script src="src/javascript/jquery-3.3.1.min.js"></script>
+    <script src="src/javascript/constant.js"></script>
     <script src="./dist/main.js"></script>
     <script src="./src/javascript/app.js"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
