--- a/second.html
+++ b/second.html
@@ -49,7 +49,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="#home">Home</a>
                 </li>
                 <li class="nav-item dropdown">
@@ -87,25 +87,9 @@
             </div>
         </div>
     </nav>
-    <section id="home">
+    <section id="trips">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-10 col-lg-10 info">
-                    <h2>The easiest way to plan personalized trips with local travel experts</h2>
-                    <p>Get your vacation custom-made by a trip designer that know what the guidebooks don’t</p>
-                    <a href="" class="btn btn-lg">Explore</a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- <section id="trips">
-        <div class="container">
-            <div class="row justify-content-center">
-                <header>
-                    <h2>Vitae lacus dictum?</h2>
-                    <p>Orem ipsum dolor sit amet, nunc sollicitudin mi
-                        condimentum, a sollicitudin eros malesuada.</p>
-                </header>
                 <div class="card">
                     <div class="card-body">
                         <i class="fas fa-walking"></i>
@@ -193,138 +177,7 @@
             </div>
         </div>
         </div>
-    </section> -->
-    <section id="calendar">
-        <div class="calendar">
-            <div class="calendar-info">
-                <h2>My trip calendar</h2>
-                <p>Next trip is: <span>February 28, 2019</span></p>
-                <div class="mini-calendar"></div>
-                <a href="" class="btn btn-success">Plan trip</a>
-            </div>
-            <div class="calendar-body">
-                <div class="calendar-nav">
-                    <a href="" class="prev">
-                        <i class="fa fa-chevron-left"></i>Jan 2019
-                    </a>
-                    <h4 class="title">February 2019</h4>
-                    <a href="" class="next">
-                        Mar 2019<i class="fa fa-chevron-right"></i>
-                    </a>
-                </div>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Sun</th>
-                            <th>Mon</th>
-                            <th>Tue</th>
-                            <th>Wed</th>
-                            <th>Thu</th>
-                            <th>Fri</th>
-                            <th>Sat</th>
-                        </tr>
-                    </thead>
-                </table>
-            </div>
-        </div>
-        <div class="choose-trip">
-            <h3>Click on type and choose trip</h3>
-            <div class="select-aria">
-                <a class="select-item" href="#" data-filter='.trip-3'>Pussy trip</a>
-                <a class="select-item" href="#" data-filter='.trip-3'>Savage trip</a>
-                <a class="select-item" href="#" data-filter='.trip-3'>Try escape trip</a>
-                <a class="select-item" href="#" data-filter='.trip-3'>Train trip</a>
-                <a class="select-item" href="#" data-filter='.trip-2'>No road trip</a>
-                <a class="select-item" href="#" data-filter='.trip-1'>Speed hack trip</a>
-            </div>
-            <div class="slide-trips">
-                <div href="" class="slide trip-1">
-                    <div class="back-overplay"><i class="fas fa-search"></i></div>
-                </div>
-                <div href="" class="slide trip-1">
-                    <div class="back-overplay"><i class="fas fa-search"></i></div>
-                </div>
-                <div href="" class="slide trip-1">
-                    <div class="back-overplay"><i class="fas fa-search"></i></div>
-                </div>
-                <div href="" class="slide trip-1">
-                    <div class="back-overplay"><i class="fas fa-search"></i></div>
-                </div>
-                <div href="" class="slide trip-1">
-                    <div class="back-overplay"><i class="fas fa-search"></i></div>
-                </div>
-                <div href="" class="slide trip-1">
-                    <div class="back-overplay"><i class="fas fa-search"></i></div>
-                </div>
-                <div href="" class="slide trip-1">
-                    <div class="back-overplay"><i class="fas fa-search"></i></div>
-                </div>
-                <div href="" class="slide trip-1">
-                    <div class="back-overplay"><i class="fas fa-search"></i></div>
-                </div>
-                <div href="" class="slide trip-1">
-                    <div class="back-overplay"><i class="fas fa-search"></i></div>
-                </div>
-                <div href="" class="slide trip-1">
-                    <div class="back-overplay"><i class="fas fa-search"></i></div>
-                </div>
-            </div>
-
-            <a href="" class="btn btn-danger">Start rolling now</a>
-        </div>
-        </div>
     </section>
-    <!-- <section id="stats">
-        <header>
-            <h2>Vitae lacus dictum?</h2>
-            <p>Orem ipsum dolor sit amet, nunc sollicitudin mi condimentum, a sollicitudin eros malesuada.</p>
-        </header>
-        <div class="container-flex">
-            <div class="canvas-cont" style="background: #61BC7B; padding-left: 40px; padding-right: 20px; border-top-left-radius: 10px;">
-                <h2>Time spending</h2>
-                <div class="wrapper">
-                    <canvas id="time" role="img" aria-label="" </canvas> </div> <div class="info">
-                        <p>Nunc aliquam diam ac magna dapibus finibus. Suspendisse sed dictum nibh, quis efficitur
-                            diam.
-                            Cras in lacinia quam. Maecenas in pellentesque eros.</p>
-                </div>
-            </div>
-
-            <div class="canvas-cont" style="background: #508CC8; padding-right: 40px; padding-left: 20px; border-top-right-radius: 10px;">
-                <h2>Trip difficulty count</h2>
-                <div class="wrapper">
-                    <canvas id="trip-difficulty" role="img" aria-label=""></canvas>
-                </div>
-                <div class="info">
-
-                    <p>Nunc aliquam diam ac magna dapibus finibus. Suspendisse sed dictum nibh, quis efficitur diam.
-                        Cras in lacinia quam. Maecenas in pellentesque eros.</p>
-                </div>
-            </div>
-
-            <div class="canvas-cont" style="background: #F49952; padding-left: 40px; padding-right: 20px; border-bottom-left-radius: 10px;">
-                <h2>Trip mile</h2>
-                <div class="wrapper">
-                    <canvas id="trip-all-way" role="img" aria-label=""></canvas>
-                </div>
-                <div class="info">
-                    <p>Nunc aliquam diam ac magna dapibus finibus. Suspendisse sed dictum nibh, quis efficitur diam.
-                        Cras in lacinia quam. Maecenas in pellentesque eros.</p>
-                </div>
-            </div>
-
-            <div class="canvas-cont" style="background: rgb(141, 143, 206); padding-right: 40px; padding-left: 20px; border-bottom-right-radius: 10px;">
-                <h2>Trip season</h2>
-                <div class="wrapper">
-                    <canvas id="trip-activity" role="img" aria-label=""></canvas>
-                </div>
-                <div class="info">
-                    <p>Nunc aliquam diam ac magna dapibus finibus. Suspendisse sed dictum nibh, quis efficitur diam.
-                        Cras in lacinia quam. Maecenas in pellentesque eros.</p>
-                </div>
-            </div>
-        </div>
-    </section> -->
     <script src="src/javascript/jquery-3.3.1.min.js"></script>
     <script src="src/javascript/constant.js"></script>
     <script src="./dist/main.js"></script>
