--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
             </div>
         </div>
         <div class="choose-trip">
+            <i class="fa fa-times" aria-hidden="true"></i>
             <h3>Click on type and choose trip</h3>
             <div class="select-aria">
                 <a class="select-item" href="#" data-filter='.trip-3'>Pussy trip</a>
