add default isotope filter

--- a/index.html
+++ b/index.html
@@ -231,12 +231,12 @@
             <i class="fa fa-times" aria-hidden="true"></i>
             <h3>Click on type and choose trip</h3>
             <div class="select-aria">
-                <a class="select-item" href="#" data-filter='.trip-3'>Pussy trip</a>
-                <a class="select-item" href="#" data-filter='.trip-3'>Savage trip</a>
+                <a class="select-item" href="#" data-filter='.trip-1'>Pussy trip</a>
+                <a class="select-item" href="#" data-filter='.trip-2'>Savage trip</a>
                 <a class="select-item" href="#" data-filter='.trip-3'>Try escape trip</a>
-                <a class="select-item" href="#" data-filter='.trip-3'>Train trip</a>
-                <a class="select-item" href="#" data-filter='.trip-2'>No road trip</a>
-                <a class="select-item" href="#" data-filter='.trip-1'>Speed hack trip</a>
+                <a class="select-item" href="#" data-filter='.trip-4'>Train trip</a>
+                <a class="select-item" href="#" data-filter='.trip-5'>No road trip</a>
+                <a class="select-item" href="#" data-filter='.trip-6'>Speed hack trip</a>
             </div>
             <div class="slide-trips">
                 <div href="" class="slide trip-1">
@@ -267,6 +267,163 @@
                     <div class="back-overplay"><i class="fas fa-search"></i></div>
                 </div>
                 <div href="" class="slide trip-1">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-2">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-2">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-2">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-2">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-2">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-2">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-2">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-2">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-2">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-2">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+
+
+                <div href="" class="slide trip-3">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-3">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-3">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-3">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-3">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-3">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-3">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-3">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-3">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-3">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+
+
+                <div href="" class="slide trip-4">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-4">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-4">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-4">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-4">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-4">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-4">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-4">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-4">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-4">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+
+
+                <div href="" class="slide trip-5">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-5">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-5">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-5">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-5">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-5">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-5">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-5">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-5">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-5">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+
+                <div href="" class="slide trip-6">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-6">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-6">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-6">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-6">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-6">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-6">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-6">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-6">
+                    <div class="back-overplay"><i class="fas fa-search"></i></div>
+                </div>
+                <div href="" class="slide trip-6">
                     <div class="back-overplay"><i class="fas fa-search"></i></div>
                 </div>
             </div>
